add java:isNull(...) check